# fixit

./: .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  flake.nix  lefthook.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: release.yml  test-makepkg-ubuntu.yml  tests.yml
ci/: arch-build.dockerfile  release-notes.py  release.sh
ci/aur/: .SRCINFO  PKGBUILD
ci/homebrew/Formula/: fixit.rb
doc/: MOTIVATION.md  demo.cast
packaging/: aur-bin.sh  aur.sh  homebrew.sh
ppa/: fixit_0.10.0-1_amd64.deb  fixit_0.10.0-1_arm64.deb  fixit_0.11.0-1_amd64.deb  fixit_0.11.0-1_arm64.deb  fixit_0.6.0-1_amd64.deb  fixit_0.6.0-1_arm64.deb  fixit_0.9.0-1_amd64.deb  fixit_0.9.0-1_arm64.deb
rpm/: fixit-0.10.0-1.aarch64.rpm  fixit-0.10.0-1.x86_64.rpm  fixit-0.11.0-1.aarch64.rpm  fixit-0.11.0-1.x86_64.rpm
rpm/repodata/: 0c3420eb20d71f8c5a4341d4e0e0f230ab66f010420ad228272f15af1bbed734-filelists.sqlite.bz2  1585da5e44b39991b68dbd8adb373b2cb911557a97e6332fd570e4ea8b4973ac-primary.sqlite.bz2  2dd5c4fa8562eeeeac28b1b1a1e90a36d69098a90c452efc7887811080e43466-other.sqlite.bz2  c19d1e24656a6c84036b351e0da94544e1882fea8c6d73e249301dac114d0c39-filelists.xml.zst  dc41a0fe959d15061c9f2c3f960c461f9da95595724c6ada1f47fe70503798e6-other.xml.zst  e4da955d27db4912d875445861db99beea2552d94cd10b5f4fb0a5da16c87059-primary.xml.zst  repomd.xml
scripts/: coverage.sh
src/: check_update.rs  main.rs  shlex.rs
src/cmd/: check_update.rs  fix.rs  init.rs  mod.rs
src/get_text/: iterm.rs  kitty.rs  macos_terminal.rs  mod.rs  rerun_command.rs  tmux.rs  wezterm.rs  zellij.rs
src/rules/: brew_update_upgrade.rs  cargo_clippy_args.rs  cargo_install_cwd.rs  cargo_wrong_command.rs  command_not_found.rs  cp_cwd.rs  cp_dir.rs  git_add_all_lowercase.rs  git_branch_exists.rs  git_branch_not_found.rs  git_commit_no_changes.rs  git_commit_untracked_files.rs  git_no_upstream.rs  git_retag.rs  git_wrong_command.rs  mkdir_missing_parent.rs  mod.rs  rm_dir.rs  sudo.rs  taskfile_no_task.rs  utils.rs  uv_unexpected_argument.rs
templates/: alias.fish  alias.ps1  alias.sh  alias.zsh
tests/: bash.rs  fish.rs  tmux.rs  zsh.rs
tests/data/: release.json
xtask/: Cargo.toml
xtask/src/: main.rs
