[workspace]
members = [".", "xtask"]

[package]
name = "fixit-cli"
version = "0.8.1"
edition = "2021"
license = "MIT"
authors = [ "Yevhenii Babichenko <eugene.babichenko@gmail.com>" ]
homepage = "https://github.com/eugene-babichenko/fixit"
repository = "https://github.com/eugene-babichenko/fixit"
readme = "README.md"
categories = [ "command-line-utilities" ]
description = "A utility to fix mistakes in your commands."

[[bin]]
name = "fixit"
path = "src/main.rs"

[package.metadata.deb]
name = "fixit"

[profile.release]
# The goal here is to optimize for the binary size without sacrifising any
# performance mostly by stripping any unnecessary code and data as much as
# possible on stable rustc.
strip = "symbols"
lto = true
panic = "abort"
# This does slightly reduce the binary size, but the gains are marginal and not
# worth the increased compilation time.
# codegen-units = 1

[dependencies]
# This project is conscious about its dependencies. Only add them if you really
# need to. Be aware of crates features, and only enable what is needed.
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3"
dialoguer = { version = "0.11", default-features = false }
env_logger = "0.11"
log = "0.4"
regex = "1"
strsim = "0.11"
tempfile = "3.12.0"
thiserror = "1"

[dev-dependencies]
expectrl = "0.7.1"
rstest = { version = "0.21.0", default-features = false }
xshell = "0.2.6"
